--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,25 @@
 import Layout from '../layouts/Layout.astro';
 import LoginForm from '../components/LoginForm.svelte';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout title="Estación - Valija Electrónica">
 	<main>
 		<LoginForm client:load />
 	</main>
+	<!-- <script>
+		fetch('https://localhost:44345/api/Valija/GetIdProcesoDiaByFechaHD?fecha=2025-07-15&idEstacion=3')
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Error HTTP: ${response.status}`);
+        }
+        return response.json();
+      })
+      .then(data => {
+        console.log('¡Éxito! Datos recibidos de la API:', data);
+      })
+      .catch(error => {
+        console.error('Falló la prueba de fetch directo:', error);
+  });
+	</script> -->
 </Layout>
