--- a/src/pages/docExamples/ejemploUsoSesion.astro
+++ b/src/pages/docExamples/ejemploUsoSesion.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/procesosPages/ejemploUsoSesion.astro
+import Layout from "../../layouts/LayoutRigth.astro";
 export const prerender = false;
 
 
