--- a/src/pages/procesosPages/est_valija_10valesEmpresa.astro
+++ b/src/pages/procesosPages/est_valija_10valesEmpresa.astro
@@ -5,7 +5,6 @@ import Huella from "../../components/ConfirmHuella.astro";
 import Input from "../../components/ConfirmInput.astro";
 export const prerender = false;
 
-
 // Datos de las empresas
 /*const empresas = [
   { id: 'hidrosina', nombre: 'Hidrosina' },
@@ -333,7 +332,7 @@ export const prerender = false;
       });
     </script>
 
-    <Huella />
+    <!-- <Huella /> -->
     <style>
       /* Estilos específicos para esta página */
       #checkbox-container {
@@ -409,7 +408,6 @@ export const prerender = false;
     </style>
 
 
-    <Huella />
     <style>
       /* Estilos específicos para esta página */
       #checkbox-container {
