--- a/src/pages/procesosPages/est_valija_3nominas.astro
+++ b/src/pages/procesosPages/est_valija_3nominas.astro
@@ -6,8 +6,8 @@ export const prerender = false;
 
 ---
 
-<Layout>
-  <div class="container mx-auto p-6">
+<Layout title="Carga de Nóminas">
+  <div class="container mx-auto">
     <!-- Diálogo de confirmación -->
     <div id="confirm-dialog" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
       <div class="bg-white rounded-lg p-6 max-w-4xl w-full relative z-50">
@@ -88,10 +88,10 @@ export const prerender = false;
        </div>
 
       <!-- Botón de envío -->
-      <div class="mt-8 flex justify-end">
+      <!-- <div class="mt-8 flex justify-end">
 
         <Huella />
-      </div>
+      </div> -->
 
       <!-- Resumen de archivos -->
       <div class="mt-10 grid grid-cols-1 md:grid-cols-2 gap-6">
