--- a/src/pages/procesosPages/est_valija_4cargaDocumentosxTurno.astro
+++ b/src/pages/procesosPages/est_valija_4cargaDocumentosxTurno.astro
@@ -1,13 +1,11 @@
 ---
 import Layout from '../../layouts/LayoutRigth.astro';
+import '../../styles/global.css';
 import CargaDocumentosxTurno from '../../components/customInput/est_valija_4sistemUploadComp.svelte';
 export const prerender = false;
 
-const url = new URL(Astro.request.url);
-const station = url.searchParams.get('station');
-const date = url.searchParams.get('date');
 ---
 
-<Layout station={station} date={date}>
+<Layout>
   <CargaDocumentosxTurno client:visible />
 </Layout>
