--- a/src/components/MenuHerramientas.astro
+++ b/src/components/MenuHerramientas.astro
@@ -110,9 +110,9 @@ const { items } = Astro.props;
         class="menu-item" 
         title={item.description}
         style={{
-          '--menu-bg-color': item.backgroundColor || '#1e293b',
-          '--menu-text-color': item.textColor || '#f8fafc',
-          '--menu-icon-color': item.iconColor || '#4ade80'
+          '--menu-bg-color': item.backgroundColor || 'black',
+          '--menu-text-color': item.textColor || 'white',
+          '--menu-icon-color': item.iconColor || 'gray'
         }}
       >
         <button 
@@ -138,7 +138,7 @@ const { items } = Astro.props;
 <div id="modal-left" class="modal-content hidden" style="left: 0;"></div>
 <div id="modal-right" class="modal-content hidden" style="right: 0;"></div>
 <!-- Modal Center -->
-<div id="modal-center" class="modal-content hidden draggable" style="left: 25%; width: 50%; height: 80%; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.2);">
+<div id="modal-center" class="modal-content hidden draggable" style=" width: 50%; height: 80%; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.2);">
   <div class="modal-header" style="cursor: move; border-bottom: 1px solid #e5e7eb; padding: 1rem; display: flex; justify-content: space-between; align-items: center;">
     <span id="modal-center-title" class="modal-title" style="font-weight: 600; font-size: 1.1rem;"></span>
     <div style="display:flex; gap:0.5rem; align-items:center;">
@@ -150,7 +150,7 @@ const { items } = Astro.props;
 </div>
 
 <!-- Modal Móvil -->
-<div id="modal-mov" class="modal-content hidden draggable" style=" height: 83vh; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.2); overflow-y: auto;">
+<div id="modal-mov" class="modal-content hidden draggable" style=" height: 90vh; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.2); overflow-y: auto;">
   <div class="modal-header" style="cursor: move; border-bottom: 1px solid #e5e7eb; padding: 1rem; display: flex; justify-content: space-between; align-items: center;">
     <span id="modal-mov-title" class="modal-title" style="font-weight: 600; font-size: 1.1rem;"></span>
     <div style="display:flex; gap:0.5rem; align-items:center;">
@@ -183,11 +183,11 @@ const { items } = Astro.props;
 
 <style>
   .menu-container {
-    padding: 1rem;
     max-width: 100%;
     margin: 0 auto;
     overflow-y: auto;
     height: 90dvh;
+    padding: .3rem;
   }
 
   .menu-grid {
@@ -265,7 +265,7 @@ const { items } = Astro.props;
   }
 
   .menu-link:hover {
-    background: rgba(34, 197, 94, 0.1);
+    background: rgba(56, 56, 56, 0.185);
     transform: scale(1.1);
   }
 
