--- a/src/components/NavBarMenu.astro
+++ b/src/components/NavBarMenu.astro
@@ -4,15 +4,10 @@
 interface Props {
     station?: string | null;
     date?: string | null;
-    userData?: {
-        c_Nombre: string;
-        c_ApellidoPat: string;
-        c_ApellidoMat: string;
-    } | null;
 }
 
-const { station, date, userData } = Astro.props;
-
+const { SessionTotal } = Astro.locals;
+const { station, date } = Astro.props;
 // Formatear la fecha para mostrarla, añadiendo la zona horaria para evitar errores de un día
 const formattedDate = date 
     ? new Date(date + 'T06:00:00Z').toLocaleDateString("es-MX", {
@@ -23,22 +18,22 @@ const formattedDate = date
     })
     : "Fecha no disponible";
 
-const userName = userData ? `${userData.c_Nombre} ${userData.c_ApellidoPat} ${userData.c_ApellidoMat}` : "Usuario";
+const userName = SessionTotal?.resultValidated?.userObj ? `${SessionTotal?.resultValidated?.userObj.c_Nombre} ${SessionTotal?.resultValidated?.userObj.c_ApellidoPat} ${SessionTotal?.resultValidated?.userObj.c_ApellidoMat}` : "Usuario";
 ---
 
-<header class="bg-gray-800 text-white p-2 shadow-md sticky top-0 z-50">
+<header class="bg-[#018E2E] text-white text-shadow-lg p-2 shadow-md sticky top-0 z-50">
     <div class="container mx-auto max-h-[9dvh]">
         <div class="flex justify-between items-center">
             <!-- Lado Izquierdo: Navegación y Título -->
             <div class="flex items-center space-x-4">
-                <a href="/dashboard" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold px-4 py-2 rounded-lg shadow-md transition duration-200 flex items-center">
+                <a href="/dashboard" class="bg-[#AFC73D] hover:bg-[#FAEB30] text-black font-semibold px-4 py-2 rounded-lg shadow-md transition duration-200 flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
                     </svg>
                     Estacion | Dia
                 </a>
                 <div class="h-6 w-px bg-gray-600"></div>
-                <h1 class="text-lg font-bold text-nowrap">Menú de Procesos</h1>
+                <h1 class="text-lg font-bold text-nowrap">Valija Electronica</h1>
             </div>
 
             <!-- Centro: Información de la Estación -->
@@ -50,7 +45,7 @@ const userName = userData ? `${userData.c_Nombre} ${userData.c_ApellidoPat} ${us
                 </div>
                 <div class="h-4 w-px bg-gray-600"></div>
                 <div class="flex items-center">
-                    <span class="text-gray-400 mr-2">Fecha:</span>
+                    <span class="text-gray-100 mr-2">Fecha:</span>
                     <span class="font-medium">{formattedDate}</span>
                 </div>
             </div>
@@ -59,10 +54,10 @@ const userName = userData ? `${userData.c_Nombre} ${userData.c_ApellidoPat} ${us
             <div class="flex items-center space-x-4">
                 <div class="text-right">
                     <div>
-                        <span class="text-gray-400 mr-2">Estación:</span>
+                        <span class="text-gray-100 mr-2">Estación:</span>
                         <span class="font-medium text-lg">HD-{station || 'N/A'}</span>
                     </div>
-                    <div id="navbar-fullname" class="text-xs text-gray-400"></div>
+                    <div id="navbar-fullname" class="text-xs text-gray-100">{userName}</div>
                 </div>
                 <div class="h-6 w-px bg-gray-600"></div>
                 <form action="/api/logout" method="POST">
