--- a/src/layouts/LayoutMenu.astro
+++ b/src/layouts/LayoutMenu.astro
@@ -22,14 +22,16 @@ import './src/styles/global.css'
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		
 	}
 	body {
-		background-color: #d4d4d4;
-		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		scrollbar-color: #333 white;
+        background-color: #2d2d2d;
+		overflow-y: hidden;
 	}
 	*{
+		scrollbar-color: white #2d2d2d;
 		scrollbar-width: thin;
+		scroll-behavior: smooth;
 
 	}
 </style>
