--- a/src/layouts/LayoutRigth.astro
+++ b/src/layouts/LayoutRigth.astro
@@ -1,7 +1,9 @@
 ---
 import "../styles/global.css";
 import ContenidoAMostrar from "../components/ContenidoAMostrar.astro";
-const { content, station, date } = Astro.props;
+const { content, station, date, title } = Astro.props;
+import Huella from "../components/ConfirmHuella.astro";
+
 export const prerender = false;
 // const user = Astro.locals.user;
 
@@ -21,14 +23,17 @@ export const prerender = false;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{content}</title>
+		<title>{title}</title>
 	</head>
 	<body>
-		<!-- <div class="px-6"> -->
-			<ContenidoAMostrar station={station} date={date} />
+		<ContenidoAMostrar station={station} date={date} title={title}/>
 		<main>
 			<slot />
 		</main>
+		<br />
+		<div class="flex items-center justify-center">
+			<Huella />
+		</div>
 	</body>
 </html>
 
@@ -41,7 +46,12 @@ export const prerender = false;
 	}
 	body {
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-		background-color: #d4d4d4;
 
+
+	}
+	*{
+		scrollbar-color: white #2d2d2d;
+		scrollbar-width: thin;
+		scroll-behavior: smooth;
 	}
 </style>
