--- a/src/pages/menuProcesosEstacion.astro
+++ b/src/pages/menuProcesosEstacion.astro
@@ -5,10 +5,12 @@ import Layout from '../layouts/LayoutMenu.astro';
 import NavBarMenu from '../components/NavBarMenu.astro';
 import ProcessTracker from '../components/ProcessTracker.svelte';
 import MenuHerramientas from "../components/MenuHerramientas.astro";
+import CircleHelper from "../components/CircleHelperTooltip.astro"
+import ButtonMove from "../components/ButtonMove.astro"
 
 // El middleware ya ha verificado la sesión.
-const user = Astro.locals.user;
-if (!user) {
+const sessionTotal = Astro.locals.SessionTotal;
+if (!sessionTotal) {
   // Aunque el middleware ya se encarga, esto es un fallback de seguridad.
   return Astro.redirect('/');
 }
@@ -73,33 +75,52 @@ const items: MenuItem[] = [
     title: "Relacion de Facturas",
     description: "Relacion de Facturas VDM con Ingresos",
     icon: "receipt",
-    link: "/estacion/est_valija_12RelacionFacturasIngresos", // Asegúrate de que esta ruta sea correcta
-    modalSide: "mov" as const,
+    link: "/procesosPages/est_valija_12RelacionFacturasIngresos", // Asegúrate de que esta ruta sea correcta
+    modalSide: "center" as const,
     isOpen: false,
     sugerencia: true,
-    backgroundColor: "#1e293b",
-    iconColor: "white",
-    textColor: "white",
   },
   {
     title: "Ayuda",
     description: "Ayuda",
     icon: "receipt",
-    link: "/estacion/form_ayuda",
-    modalSide: "center" as const,
+    link: "/procesosPages/form_ayuda",
+    modalSide: "mov" as const,
     isOpen: false,
     backgroundColor: "oklch(0.637 0.237 25.331)",
     iconColor: "white",
     textColor: "white",
   },
   {
-    title: "zzzz",
-    description: "zzzz",
+    title: "right",
+    description: "right",
     icon: "logout",
     link: "/zzzz",
-    modalSide: "center" as const,
+    modalSide: "right" as const,
     isOpen: false,
     backgroundColor: "oklch(0.637 0.237 25.331)",
+    iconColor: "white",
+    textColor: "white",
+  },
+  {
+    title: "left",
+    description: "left",
+    icon: "logout",
+    link: "/zzzz",
+    modalSide: "left" as const,
+    isOpen: false,
+    backgroundColor: "oklch(0.637 0.237 25.331)",
+    iconColor: "white",
+    textColor: "white",
+  },
+  {
+    title: "center",
+    description: "center",
+    icon: "logout",
+    link: "/docExamples/ButtonMoveExample",
+    modalSide: "center" as const,
+    isOpen: false,
+    backgroundColor: "black",
     iconColor: "white",
     textColor: "white",
   },
@@ -120,33 +141,32 @@ const items: MenuItem[] = [
         id="left-panel" class="bg-white"
         style="width: 30%; height: 91dvh; overflow-y: auto; padding: 0px; position: relative;"
       >
+      <div
+      id="resumen-procesos-header"
+      class="bg-gray-50 sticky top-0 z-10 flex justify-between items-center p-2 w-[100%]"
+        >
+
+          <h1 class="text-lg font-bold uppercase">Listado de Procesos</h1>
+          <ButtonMove 
+          id="left-panel"
+          icono="▼"
+          direction="down"
+          clases="p-2 m-2"
+        />
+      </div>
         <div class="mx-auto bg-white p-3">
-          <!-- <div class="flex items-center mb-6 w-full"> -->
-            <!-- <h1 class="text-2xl font-bold uppercase">Resumen de Pólizas</h1> -->
-            <!-- <ResumenProcesosModal
-              data={JSON.stringify(resumenProcesos)}
-              buttonText=""
-              client:load
-              buttonClass="ml-4 bg-gray-500 hover:bg-gray-600 text-white font-medium py-1.5 px-4 rounded transition"
-            /> -->
-          <!-- </div> -->
+
   
           <form id="formulario" class="space-y-8 ">
             <div
-              class="bg-white rounded-xl  mb-6 "
+              class="bg-white rounded-xl  mb-6"
             >
-              <div
-                id="resumen-procesos-header"
-                class="cursor-pointer flex justify-between items-center p-3 rounded-lg hover:bg-gray-50"
-              >
-                <h2 class="font-bold text-gray-800">Resumen de procesos</h2>
-                <span id="resumen-procesos-icon" class="text-gray-500">▼</span>
-              </div>
-              <div
+              
+              <!-- <div
                 id="resumen-procesos-content"
-                class="overflow-hidden transition-all duration-300 ease-in-out text-sm max-h-[1000px] pb-2"
+                class="overflow-hidden transition-all duration-900 ease-in-out text-sm max-h-[1000px] pb-2"
                 style="max-height: 1000px;"
-              >
+              > -->
                 {
                   resumenProcesos.procesos.map((proceso: any) => {
                     const subprocesos = proceso.subprocesos || {};
@@ -173,10 +193,10 @@ const items: MenuItem[] = [
                     );
                   })
                 }
-              </div>
+              <!-- </div> -->
             </div>
   
-            <div class="bg-gray-50 p-4 rounded-xl border border-gray-200">
+            <div class="bg-gray-50 p-4 rounded-xl border border-gray-400">
               <label
                 for="observaciones"
                 class="block font-medium text-sm mb-2 text-gray-800"
@@ -190,44 +210,51 @@ const items: MenuItem[] = [
             </div>
   
             <div
-              class="bg-gray-50 p-4 rounded-xl border border-gray-200 grid grid-cols-1 md:grid-cols-2 gap-4"
+              class="bg-gray-50 p-4 rounded-xl border border-gray-400 grid grid-cols-1 md:grid-cols-2 gap-4"
             >
-              <div>
-                <label class="block font-medium mb-2 text-gray-800"
-                  >Nombre y firma del verificador:</label
-                >
-                <input
-                  type="text"
-                  value="LUIS ALVARO VILLEGAS"
-                  disabled
-                  class="w-full bg-gray-200 border border-gray-300 rounded p-2"
-                />
-              </div>
+              
             </div>
   
-            <div class="flex items-center justify-center bg-gray-100">
+            <div class="flex items-center justify-center">
               <a 
                 href="/estacion/boton_Master"
                 class="inline-block bg-blue-500 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-600 transition duration-300"
               >
                 Confirmar
               </a>
+
             </div>
+   
           </form>
+          <br/>
+          <br/>
+
+
         </div>
+        
+        <ButtonMove 
+        id="left-panel"
+        icono="▲"
+        direction="up"
+        clases="p-2 m-2"
+        styles="position: absolute; right: 0; margin-top:-55px;"
+        />
       </div>
   
-      <div id="resizer" class="bg-gray-800" style="width: 10px; cursor: col-resize; height: 100%; position: relative; z-index: 10;" title="Arrastrar para ajustar">
+      <CircleHelper />
+      
+      <div id="resizer" class="bg-[#2d2d2d]" style="width: 10px; cursor: col-resize; height: 100%; position: relative; z-index: 10;" title="Arrastrar para ajustar">
         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 2px; height: 30px; background-color: #999;"></div>
       </div>
       <div
         id="modal-container"
-        style="flex: 1; height: 100%; overflow-y: hidden; padding: 5px; background-color: #d4d4d4;"
-      >
-        <div class="bg-white px-5 py-2 rounded-lg border border-gray-200">
-          <h2 class="text-lg font-semibold">Menu de opciones.</h2>
+        style="flex: 1; height: 100%; overflow-y: hidden; padding: 5px; "
+        class="mt-2 mr-2"
+        >
+        <div class="bg-white px-5 py-2 rounded-lg border border-gray-300 shadow-lg">
+          <h2 class="text-lg font-semibold">Menu de Accesos y Herramientas.</h2>
           <p class="text-gray-600">
-            Si necesitas ayuda con algun proceso selecciona un botón.
+            Si necesitas asistencia preciona en el boton de ayuda.
           </p>
         </div>
         <MenuHerramientas items={items} />
