--- a/src/pages/procesosPages/est_valija_11terminalesVoucher.astro
+++ b/src/pages/procesosPages/est_valija_11terminalesVoucher.astro
@@ -8,7 +8,7 @@ export const prerender = false;
 
 <Layout>
   
-<div class="container mx-auto p-6 bg-white shadow-md font-sans">
+<div class="container mx-auto p-6 bg-white shadow-md font-sans rounded-lg">
 
     <!-- Modal para visualizar PDF de ventas por periodo -->
     <div id="dialog-ventas-periodo" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50 overflow-hidden">
@@ -53,7 +53,7 @@ export const prerender = false;
             <CustomPdfInput groupId="ventas" title="Ventas" client:visible confirmado={true} />
           </div>
         </div>
-          <Huella />
+          <!-- <Huella /> -->
     </section>
 </div>
 <style>
