--- a/src/pages/procesosPages/est_valija_7remisionPerifericos.astro
+++ b/src/pages/procesosPages/est_valija_7remisionPerifericos.astro
@@ -287,7 +287,7 @@ export const prerender = false;
   });
 </script>
 
-<Huella />
+<!-- <Huella /> -->
 <style>
   /* Estilos específicos para esta página */
   #hl-input-wrapper.archivo-seleccionado {
