--- a/src/pages/procesosPages/est_valija_9jarreo.astro
+++ b/src/pages/procesosPages/est_valija_9jarreo.astro
@@ -143,7 +143,7 @@ export const prerender = false;
         </div>
         <br />
 
-        <HuellaConfirmacion />
+        <!-- <HuellaConfirmacion /> -->
     </div>
 
         <!--Estilos de TAILWINDCSS-->
