--- a/src/components/MenuHerramientas.astro
+++ b/src/components/MenuHerramientas.astro
@@ -110,8 +110,8 @@ const { items } = Astro.props;
         class="menu-item" 
         title={item.description}
         style={{
-          '--menu-bg-color': item.backgroundColor || 'black',
-          '--menu-text-color': item.textColor || 'white',
+          '--menu-bg-color': item.backgroundColor || 'white',
+          '--menu-text-color': item.textColor || 'black',
           '--menu-icon-color': item.iconColor || 'gray'
         }}
       >
