--- a/src/pages/procesosPages/est_valija_5resultadoVentasxPeriodo.astro
+++ b/src/pages/procesosPages/est_valija_5resultadoVentasxPeriodo.astro
@@ -68,18 +68,14 @@ export const prerender = false;
 
 
 
-    <section class="mb-6">
-      <h1 class="text-2xl font-bold text-gray-800 mb-2">
-        Resultado de la consulta de ventas por periodo
-      </h1>
-    </section>
+
 
 
     <!-- Tabla de Listado de ventas por periodo -->
       <div class="overflow-x-auto border border-gray-300 rounded-lg shadow-sm">
       <table class="min-w-full text-sm text-center text-gray-800">
         <caption class="text-base font-semibold text-gray-900 py-2"
-          >Listado de ventas por periodo</caption
+          >Resultado consulta: Ventas por Periodo</caption
         >
         <thead class="bg-gray-100 text-gray-700 uppercase text-xs">
           <tr>
