--- a/src/pages/procesosPages/est_valija_9jarreo.astro
+++ b/src/pages/procesosPages/est_valija_9jarreo.astro
@@ -6,7 +6,7 @@ export const prerender = false;
 
 ---
 
-<Layout>
+<Layout title="Jarreo de Documentos">
     <!-- Sección de inicio de sesión -->
     <div
         id="login-section"
