--- a/src/pages/procesosPages/est_valija_1ingresoHojaLiquidacion.astro
+++ b/src/pages/procesosPages/est_valija_1ingresoHojaLiquidacion.astro
@@ -3,6 +3,7 @@ import "../../styles/global.css";
 import Layout from "../../layouts/LayoutRigth.astro";
 import Huella from "../../components/ConfirmHuella.astro";
 import CustomPdfInput from "../../components/customInput/CustomPdfInput.svelte";
+import PdfInputGroup from "../../components/customInput/PdfInputGroup.svelte";
 export const prerender = false;
 
 const { station, date } = Astro.props;
@@ -18,9 +19,9 @@ const { station, date } = Astro.props;
  id="hl-contenedor-principal"
  class="max-w-2xl mx-auto p-6 bg-white rounded-lg shadow-md border border-gray-200"
 >
- <h2 class="text-xl font-bold mb-4 text-gray-800">
+ <!-- <h2 class="text-xl font-bold mb-4 text-gray-800">
    Ingreso de Hoja de Liquidación
- </h2>
+ </h2> -->
 
  <!-- Tabla 1: Ventas de combustible -->
  <div
@@ -131,334 +132,62 @@ const { station, date } = Astro.props;
      </tfoot>
    </table>
  </div>
+
+
+ 
+ <div class="mt-6">
+  <div class="flex items-center space-x-2">
+    <input
+      type="checkbox"
+      id="check-hl-turnos"
+      class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
+    />
+    <label for="check-hl-turnos" class="text-sm font-medium text-gray-700"
+      >Subir de Hojas de Liquidación por turnos</label
+    >
+  </div>
+  <div id="seccion-hl-turnos" class="mt-8 grid grid-cols-3 gap-4 hidden">
+    <div>
+      <h3 class="mb-2">Turno 1</h3>
+      <CustomPdfInput groupId="hojaLiquidacionTurno1" title="Hoja Liquidación Turno 1" client:visible confirmado={true} />
+    </div>
+    <div>
+      <h3 class="mb-2">Turno 2</h3>
+      <CustomPdfInput groupId="hojaLiquidacionTurno2" title="Hoja Liquidación Turno 2" client:visible confirmado={true} />
+    </div>
+    <div>
+      <h3 class="mb-2">Turno 3</h3>
+      <CustomPdfInput groupId="hojaLiquidacionTurno3" title="Hoja Liquidación Turno 3" client:visible confirmado={true} />
+    </div>
+  </div>
+  <script>
+    const checkHLTurnos = document.getElementById("check-hl-turnos");
+    const seccionHLTurnos = document.getElementById("seccion-hl-turnos");
+    if (checkHLTurnos && seccionHLTurnos) {
+      checkHLTurnos.addEventListener("change", (e) => {
+        if ((e.target as HTMLInputElement).checked) {
+          seccionHLTurnos.classList.remove("hidden");
+        } else {
+          seccionHLTurnos.classList.add("hidden");
+        }
+      });
+    }
+  </script>
+</div>
+
  <br />
 
- <!-- Input de archivo PDF con mejor diseño -->
- <div id="hl-contenedor-input" class="mb-6">
-   <label
-     class="block text-sm font-medium text-gray-700 mb-2"
-     for="input-hojaLiquidacion"
-   >
-     Seleccione la hoja de corte en PDF de la Hoja de Liquidación
-   </label>
-   <div
-     id="hl-input-wrapper"
-     class="relative border-2 border-dashed border-gray-300 rounded-lg p-4 transition-all duration-200 hover:border-blue-400 focus-within:border-blue-500 focus-within:ring-2 focus-within:ring-blue-200"
-   >
-     <input
-       id="input-hojaLiquidacion"
-       type="file"
-       accept=".pdf"
-       class="block w-full text-sm text-gray-500 file:mr-4 file:py-2.5 file:px-5 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 cursor-pointer"
-     />
-     <p class="mt-2 text-xs text-gray-500">Formatos aceptados: PDF</p>
-   </div>
- </div>
+ <CustomPdfInput inputId="input-hojaLiquidacion-corte" label="Hoja de Liquidación de Corte" client:visible />
 
- <!-- Botón para eliminar el archivo -->
- <div id="hl-acciones" class="flex justify-end">
-   <button
-     id="removeFile-hojaLiquidacion"
-     class="px-4 py-2 text-sm text-white bg-red-600 rounded-lg shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300 hidden transition-all duration-200"
-   >
-     <span class="flex items-center">
-       <svg
-         xmlns="http://www.w3.org/2000/svg"
-         class="h-4 w-4 mr-1"
-         fill="none"
-         viewBox="0 0 24 24"
-         stroke="currentColor"
-       >
-         <path
-           stroke-linecap="round"
-           stroke-linejoin="round"
-           stroke-width="2"
-           d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
-         ></path>
-       </svg>
-       Eliminar archivo
-     </span>
-   </button>
- </div>
 
- <div class="mt-6">
-   <div class="flex items-center space-x-2">
-     <input
-       type="checkbox"
-       id="check-gastos"
-       class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
-     />
-     <label for="check-gastos" class="text-sm font-medium text-gray-700"
-       >Subir por turnos</label
-     >
-   </div>
-   <!-- Input de archivo para gastos (oculto por defecto) -->
-   <div id="seccion-gastos" class="mt-4 hidden">
-     <div class="mt-2 flex gap-4">
-       <div class="mt-8 grid grid-cols-3 gap-4">
-         <div>
-           <h3 class="mb-2">Turno 1</h3>
-           <CustomPdfInput
-             groupId="ventas"
-             title="Ventas"
-             client:visible
-             confirmado={true}
-           />
-         </div>
-         <div>
-           <h3 class="mb-2">Turno 2</h3>
-           <CustomPdfInput
-             groupId="ventas"
-             title="Ventas"
-             client:visible
-             confirmado={true}
-           />
-         </div>
-         <div>
-           <h3 class="mb-2">Turno 3</h3>
-           <CustomPdfInput
-             groupId="ventas"
-             title="Ventas"
-             client:visible
-             confirmado={true}
-           />
-         </div>
-       </div>
-     </div>
-     <!-- <Huella /> -->
-   </div>
 
-   <!-- Modal para visualizar el PDF -->
-   <dialog
-     id="modal-pdf"
-     class="rounded-lg p-0 w-full max-w-[100%] h-[100%]"
-   >
-     <div class="p-6 h-[100%] bg-white rounded-lg shadow-lg relative">
-       <!-- Encabezado -->
-       <h2 class="text-lg font-semibold text-gray-800 mb-4">
-         Vista previa de la Hoja de Liquidación
-       </h2>
 
-       <!-- Simulación PDF -->
-       <div class="mb-4 border rounded overflow-hidden h-[65vh]">
-         <iframe
-           src="/assets/simulacion.pdf"
-           class="w-full h-full"
-           title="Vista previa PDF"></iframe>
-       </div>
 
-       <!-- Confirmación -->
-       <p class="text-sm text-gray-700 mb-1">
-         ¿Desea confirmar esta Hoja de Liquidación?
-       </p>
 
-       <!-- Botones -->
-       <div class="flex justify-end space-x-2 mt-[-2rem]">
-         <button
-           id="btn-cancelar"
-           class="px-4 py-2 text-sm text-gray-600 bg-gray-100 rounded hover:bg-gray-200"
-         >
-           <p class="text-sm text-gray-700 mb-4">
-             ¿Desea confirmar esta Hoja de Liquidación?
-           </p>
 
-           <!-- Botones -->
-           <div class="flex justify-end space-x-2">
-             <button
-               id="btn-cancelar"
-               class="px-4 py-2 text-sm text-gray-600 bg-gray-100 rounded hover:bg-gray-200"
-             >
-               Cancelar
-             </button>
-             <button
-               id="btn-confirmar"
-               class="px-4 py-2 text-sm text-white bg-green-600 rounded hover:bg-green-700"
-             >
-               Confirmar
-             </button>
-           </div>
-         </button>
-       </div>
 
-       <script>
-         const checkGastos = document.getElementById("check-gastos");
-         const seccionGastos = document.getElementById("seccion-gastos");
 
-         if (checkGastos && seccionGastos) {
-           checkGastos.addEventListener("change", (e) => {
-             if (e.target.checked) {
-               seccionGastos.classList.remove("hidden");
-             } else {
-               seccionGastos.classList.add("hidden");
-             }
-           });
-         }
-         // Variables para el manejo del archivo
-         let archivoSeleccionado = false;
-         const inputHojaLiquidacion = document.getElementById(
-           "input-hojaLiquidacion",
-         );
-         const punto1 = document.getElementById("punto1-hojaLiquidacion");
-         const punto2 = document.getElementById("punto2-hojaLiquidacion");
-         const removeFileBtn = document.getElementById(
-           "removeFile-hojaLiquidacion",
-         );
-         const modalPdf = document.getElementById("modal-pdf");
-         const btnCancelar = document.getElementById("btn-cancelar");
-         const btnConfirmar = document.getElementById("btn-confirmar");
-         const contenidoHojaLiquidacion = document.getElementById(
-           "contenido-hojaLiquidacion",
-         );
 
-         // Referencia al contenedor del input
-         const inputWrapper = document.getElementById("hl-input-wrapper");
-
-         // Evento para cuando se selecciona un archivo
-         inputHojaLiquidacion?.addEventListener("change", function (e) {
-           const target = e.target as HTMLInputElement;
-           const file = target?.files?.[0];
-           if (file && file.type === "application/pdf") {
-             archivoSeleccionado = true;
-             // Actualizar indicador visual
-             punto1?.classList.remove("bg-gray-300");
-             punto1?.classList.add("activo");
-             // Mostrar botón de eliminar
-             removeFileBtn?.classList.remove("hidden");
-             // Aplicar estilo de archivo seleccionado
-             inputWrapper?.classList.add("archivo-seleccionado");
-             // Abrir el modal automáticamente al seleccionar un archivo PDF
-             if (modalPdf instanceof HTMLDialogElement) {
-               modalPdf.showModal();
-             }
-           } else if (file) {
-             alert("Por favor, selecciona solo archivos PDF");
-             if (inputHojaLiquidacion instanceof HTMLInputElement) {
-               inputHojaLiquidacion.value = "";
-             }
-           }
-         });
-
-         // Evento para eliminar el archivo
-         removeFileBtn?.addEventListener("click", function () {
-           archivoSeleccionado = false;
-           if (inputHojaLiquidacion instanceof HTMLInputElement) {
-             inputHojaLiquidacion.value = "";
-           }
-           // Restablecer indicadores visuales
-           punto1?.classList.remove("activo");
-           punto1?.classList.add("bg-gray-300");
-           punto2?.classList.remove("activo");
-           punto2?.classList.add("bg-gray-300");
-           // Ocultar botón de eliminar
-           removeFileBtn?.classList.add("hidden");
-           // Ocultar contenido de la hoja de liquidación
-           contenidoHojaLiquidacion?.classList.add("hidden");
-           // Restablecer estilos del contenedor
-           inputWrapper?.classList.remove(
-             "archivo-seleccionado",
-             "archivo-confirmado",
-           );
-         });
-
-         // Evento para cancelar en el modal
-         btnCancelar?.addEventListener("click", function () {
-           if (modalPdf instanceof HTMLDialogElement) {
-             modalPdf.close();
-           }
-           archivoSeleccionado = false;
-           if (inputHojaLiquidacion instanceof HTMLInputElement) {
-             inputHojaLiquidacion.value = "";
-           }
-           // Restablecer indicadores visuales
-           punto1?.classList.remove("activo");
-           punto1?.classList.add("bg-gray-300");
-           // Ocultar botón de eliminar
-           removeFileBtn?.classList.add("hidden");
-           // Restablecer estilos del contenedor
-           inputWrapper?.classList.remove(
-             "archivo-seleccionado",
-             "archivo-confirmado",
-           );
-         });
-
-         // Evento para confirmar en el modal
-         btnConfirmar?.addEventListener("click", function () {
-           if (modalPdf instanceof HTMLDialogElement) {
-             modalPdf.close();
-           }
-           // Actualizar indicadores visuales
-           punto2?.classList.remove("bg-gray-300");
-           punto2?.classList.add("activo");
-           // Aplicar estilo de archivo confirmado
-           inputWrapper?.classList.remove("archivo-seleccionado");
-           inputWrapper?.classList.add("archivo-confirmado");
-           // Mostrar contenido de la hoja de liquidación
-           contenidoHojaLiquidacion?.classList.remove("hidden");
-         });
-       </script>
-
-       <style>
-         /* Estilos específicos para esta página */
-         #hl-input-wrapper.archivo-seleccionado {
-           border-color: #10b981; /* verde */
-           background-color: rgba(16, 185, 129, 0.05);
-         }
-
-         #hl-input-wrapper.archivo-confirmado {
-           border-color: #059669; /* verde más oscuro */
-           background-color: rgba(5, 150, 105, 0.1);
-           box-shadow: 0 0 0 3px rgba(5, 150, 105, 0.2);
-         }
-
-         #punto1-hojaLiquidacion.activo {
-           background-color: #10b981;
-           box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.3);
-         }
-
-         #punto2-hojaLiquidacion.activo {
-           background-color: #059669;
-           box-shadow: 0 0 0 2px rgba(5, 150, 105, 0.3);
-         }
-
-         /* Animación sutil para los cambios de estado */
-         #hl-input-wrapper,
-         #punto1-hojaLiquidacion,
-         #punto2-hojaLiquidacion {
-           transition: all 0.3s ease-in-out;
-         }
-       </style>
-       <style>
-         /* Estilos específicos para esta página */
-         #hl-input-wrapper.archivo-seleccionado {
-           border-color: #10b981; /* verde */
-           background-color: rgba(16, 185, 129, 0.05);
-         }
-
-         #hl-input-wrapper.archivo-confirmado {
-           border-color: #059669; /* verde más oscuro */
-           background-color: rgba(5, 150, 105, 0.1);
-           box-shadow: 0 0 0 3px rgba(5, 150, 105, 0.2);
-         }
-
-         #punto1-hojaLiquidacion.activo {
-           background-color: #10b981;
-           box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.3);
-         }
-
-         #punto2-hojaLiquidacion.activo {
-           background-color: #059669;
-           box-shadow: 0 0 0 2px rgba(5, 150, 105, 0.3);
-         }
-
-         /* Animación sutil para los cambios de estado */
-         #hl-input-wrapper,
-         #punto1-hojaLiquidacion,
-         #punto2-hojaLiquidacion {
-           transition: all 0.3s ease-in-out;
-         }
-       </style>
-     </div>
-   </dialog>
- </div>
+ 
 </div>
 </Layout>
